fix scrollbars

--- a/beta-src/src/assets/css/index.css
+++ b/beta-src/src/assets/css/index.css
@@ -1,16 +1,24 @@
-/* ::-webkit-scrollbar {
-  width: 0;
-} */
-
-/* FIXME: I need a scrollbar shown for MessageList.
-idk how to specialize based on object class or whatever.
-*/
 ::-webkit-scrollbar {
+  width: 0;
+}
+
+div::-webkit-scrollbar {
   -webkit-appearance: none;
   width: 7px;
 }
 
-::-webkit-scrollbar-thumb {
+div::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
+}
+
+textarea::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+}
+
+textarea::-webkit-scrollbar-thumb {
   border-radius: 4px;
   background-color: rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
